Added VCF file generation

--- a/contao/templates/component/_contact_person.html.twig
+++ b/contao/templates/component/_contact_person.html.twig
@@ -14,5 +14,9 @@
                 {{ block('figure_component') }}
             {% endwith %}
         {% endif %}
+
+        {% if contact.vcf is defined %}
+            <a href="{{contact.vcf}}">VCF</a>
+        {% endif %}
     </div>
 {% endblock %}
